Split sections into components

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@ code {
   width: 175px !important;
 }
 
+section {
+  height: 100vh;
+}
+
 /* button,
 span .bg-primary {
   background-color: black !important;
