Restructure Social Components into About Section.
Created includes folder

--- a/src/includes/css/styles.css
+++ b/src/includes/css/styles.css
@@ -25,6 +25,14 @@ section {
   height: 100vh;
 }
 
+#SocialLink {
+  color: initial;
+}
+
+#SocialDiv {
+  font-size: 3rem;
+}
+
 /* button,
 span .bg-primary {
   background-color: black !important;
